// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

datasource db {
  provider = "postgresql"
}

generator client {
  provider = "prisma-client"
  output   = "./generated"
}

enum Role {
  MARKETING_MANAGER
  MARKETING_COORDINATOR
  STUDENT
  ADMINISTRATOR
  GUEST
}

enum SubmissionStatus {
  DRAFT
  SUBMITTED
}

enum ReviewStatus {
  PENDING
  REVIEWING
  COMMENTED
}

model User {
  id            String    @id
  name          String
  email         String
  emailVerified Boolean   @default(false)
  image         String?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  sessions      Session[]
  accounts      Account[]

  role       Role? @default(STUDENT)
  facultyId  String?
  faculty    Faculty?  @relation(fields: [facultyId], references: [id])
  banned     Boolean?  @default(false)
  banReason  String?
  banExpires DateTime?

  updatedConfigSettings ConfigSetting[]
  updatedAcademicYears  AcademicYear[]
  submissions           Submission[]
  selectedSubmissions   Submission[]    @relation("SubmissionSelector")
  submissionComments    SubmissionComment[]

  @@unique([email])
  @@map("user")
}

model Session {
  id        String   @id
  expiresAt DateTime
  token     String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  impersonatedBy String?

  @@unique([token])
  @@index([userId])
  @@map("session")
}

model Account {
  id                    String    @id
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  @@index([userId])
  @@map("account")
}

model Verification {
  id         String   @id
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([identifier])
  @@map("verification")
}

model Faculty {
  id        String   @id @default(cuid())
  name      String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  users     User[]

  @@map("faculty")
}

model ConfigSetting {
  id          String   @id @default(uuid())
  key         String   @db.VarChar(255)
  value       String   @db.VarChar(255)
  type        String   @db.VarChar(255)
  description String?  @db.VarChar(255)
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")
  updatedById String?  @map("updated_by")
  updatedBy   User?    @relation(fields: [updatedById], references: [id])

  @@map("config_setting")
}

model AcademicYear {
  id               String    @id @default(uuid())
  yearLabel        String    @db.VarChar(35) @map("year_label")
  startDate        DateTime? @db.Date @map("start_date")
  endDate          DateTime? @db.Date @map("end_date")
  startTime        DateTime? @db.Time @map("start_time")
  endTime          DateTime? @db.Time @map("end_time")
  notiMessage      String?   @db.VarChar(255) @map("noti_message")
  firstClosureDate DateTime? @map("first_closure_date")
  finalClosureDate DateTime? @map("final_closure_date")
  isActive         Boolean   @default(false) @map("is_active")
  createdAt        DateTime  @default(now()) @map("created_at")
  updatedAt        DateTime  @updatedAt @map("updated_at")
  updatedById      String?   @map("updated_by")
  updatedBy        User?     @relation(fields: [updatedById], references: [id])
  submissions      Submission[]

  @@map("academic_year")
}

model Submission {
  id             String           @id @default(uuid())
  userId         String           @map("user_id")
  user           User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  status         SubmissionStatus @default(DRAFT)
  reviewStatus   ReviewStatus     @default(PENDING) @map("review_status")
  agreed         Boolean          @default(false)
  title          String?          @db.Text
  notes          String?          @db.Text
  submittedAt    DateTime?        @map("submitted_at")
  createdAt      DateTime         @default(now()) @map("created_at")
  updatedAt      DateTime         @updatedAt @map("updated_at")
  files          SubmissionFile[]
  isSelected     Boolean          @default(false) @map("is_selected")
  selectedAt     DateTime?        @map("selected_at")
  selectedById   String?          @map("selected_by_id")
  selectedBy     User?            @relation("SubmissionSelector", fields: [selectedById], references: [id])
  facultyId      String?          @map("faculty_id")
  academicYearId String?          @map("academic_year_id")
  academicYear   AcademicYear?    @relation(fields: [academicYearId], references: [id])
  comments       SubmissionComment[]

  @@map("submission")
}

model SubmissionComment {
  id           String     @id @default(uuid())
  submissionId String     @map("submission_id")
  submission   Submission @relation(fields: [submissionId], references: [id], onDelete: Cascade)
  authorId     String     @map("author_id")
  author       User       @relation(fields: [authorId], references: [id])
  authorRole   String     @map("author_role")
  body         String     @db.Text
  createdAt    DateTime   @default(now()) @map("created_at")
  parentId     String?    @map("parent_id")
  parent       SubmissionComment?  @relation("CommentReplies", fields: [parentId], references: [id], onDelete: SetNull)
  replies      SubmissionComment[] @relation("CommentReplies")

  @@index([submissionId])
  @@map("submission_comment")
}

model SubmissionFile {
  id           String     @id @default(uuid())
  submissionId String     @map("submission_id")
  submission   Submission @relation(fields: [submissionId], references: [id], onDelete: Cascade)
  url          String
  pathname     String
  contentType  String?    @map("content_type")
  size         Int?
  createdAt    DateTime   @default(now()) @map("created_at")

  @@map("submission_file")
}
